src/renderer/src/assets/main.css
/* ... */
.siteSelector .siteInfo .info {
  font-family: sans-serif;
  font-size: 16px;
  color: var(--lighter-text-color);
}



.sidebar {
  width: 215px;
  min-width:215px;
  overflow:hidden;
  transition:width 0.4s, min-width 0.4s, padding 0.2s;
  transition-timing-function: ease;
  padding-left:10px;
}
.sidebar .container{
  background-color: var(--primary-color);
  border-radius: var(--squarcle-radius);
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  gap: 20px;
  width:215px;
  min-width:215px;
  height:100%;
  padding:10px;
}
.sidebar.collapsed{
  width:0px;
  min-width: 0px;
  padding-left:0px;
}
#root:has(.pane-gap:hover) .sidebar.collapsed, .sidebar.collapsed:hover{
  width:215px;
  min-width:215px;
  padding-left:10px;
}


.sidebar .siteInfo {
  padding: 14px;
  background-color: var(--secondary-color);
  display: flex;
  flex-direction: row;
  box-sizing: border-box;
  border-radius: 14px;
  cursor: pointer;
  gap: 12px;
}

.sidebar .siteInfo .infoContainer {
  display: flex;
  flex-grow: 1;
  gap: 12px;
}

.sidebar .siteInfo button.exit {
  height: 30px;
  width: 30px;
}

.sidebar .siteInfo .favicon-container .favicon {
  width: 30px;
  height: 30px;
  border-radius: 100%;
}

.favicon-container .favicon img {
  width: 100%;
  border-radius: 4%;
  box-shadow: -1px 1px 2px 1px hsl(218.64deg 57.07% 16.02% / 98%);
}

.sidebar .siteInfo .favicon-container .favicon.no-icon {
  background: grey;
}

.sidebar .siteInfo .info {
  font-size: 7px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-grow: 1;
}

.sidebar .siteInfo .info h1 {
  font-size: 14px;
  color: var(--lighter-text-color);
  font-family: sans-serif;
  font-weight: 500;
  padding: 0px;
  margin: 0px;
  text-align: left;
}

.sidebar .siteInfo .info button {
  padding: 5px;
}

.sidebar .siteInfo .info button svg {
  margin-right: 0px;
}

.sidebar ul {
  padding-inline-start: 0px;
  list-style-type: none;
  flex-grow: 1;
  margin: 0px;
  margin-left: 14px;
  margin-right: 14px;
}

.sidebar ul li {
  height: fit-content;
  color: var(--lightest-text-color);
  font-size: 14px;
  border-bottom: 1px solid #162748;
  font-weight: 100;
}

.sidebar ul li.parent {
  display: flex;
  border-bottom: none;
}

.sidebar ul li button.parent {
  flex-grow: 1;
  display: flex;
  align-items: anchor-center;
  font-size: 18px;
  font-weight: 400;
  padding-top: 16px;
  padding-left: 0px;
  padding-right: 0px;
  padding-bottom: 16px;
  background: none;
}

.sidebar ul li button.parent:focus button {
  visibility: visible;
}

.sidebar ul li button.parent:focus-within button {
  visibility: visible;
}

.sidebar ul li span.collectionLabel {
  color: var(--lighter-text-color);
  padding-left: 0.7em;
}

.sidebar ul li span {
  display: inline-block;
  word-break: break-word;
  text-indent: 0em;
  padding-left: 2em;
}

.sidebar ul li button .folderIcon {
  stroke: none;
}

.sidebar ul li {
  word-break: break-word;
  font-family: Arial, Helvetica, sans-serif;
  cursor: pointer;
  color: var(--lightest-text-color);
}

.sidebar ul li button {
  justify-content: flex-start;
}

.sidebar ul li .buttons {
  display: none;
}

.sidebar ul li:hover .buttons,
.sidebar ul li:focus-within {
  display: flex;
  align-items: center;
}

.sidebar ul li:hover .buttons button,
.sidebar ul li:focus-within .buttons button {
  width: 20px;
  height: 20px;
  padding: 5px;
  background-color: var(--secondary-color);
  border-radius: 6px;
}

.sidebar ul li:hover .buttons,
.sidebar ul li:focus-within .buttons {
  display: flex;
}

.site-buttons {
  display: inline-grid;
  grid-template-columns: 1fr 1fr;
  gap: 10px;
}

.sidebar ul span.listHeader {
  font-size: 14px;
  color: #acbdd2;
  font-weight: 500;
  font-family: Helvetica;
  display: flex;
  line-height: 19px;
  justify-content: space-between;
}

.sidebar ul span.listHeader button {
  padding: 2px;
  margin: 0px;
  min-width: 19px;
  border-radius: 6px;
  width: 20px;
  height: 20px;
}

.sidebar ul button.parent button {
  padding: 5px;
  border-radius: 6px;
  visibility: hidden;
}

.sidebar ul button.parent:hover button {
  display: inherit;
  visibility: visible;
}

.sidebar ul .parent button svg {
  margin-right: 0px;
}

.main-view {
  flex-grow: 1;
  background: var(--primary-color);
  box-sizing: border-box;
  padding: 20px;
  border-radius: 6px;
  overflow-y: scroll;
  display: flex;
  flex-direction: column;
  scrollbar-width: none;
  position: relative;
}

.main-view.thin-padding {
  padding: 14px !important;
}

.title-bar {
  display: flex;
  flex-direction: row;
}

.title-bar .title {
  flex-grow: 1;
}

.title-bar button {
  align-self: center;
  cursor: pointer;
  background: none;
}

.main-view .title-bar input.title {
  margin: 5px;
  padding: 5px;
  background: none;
  color: white;
  border: none;
  outline: none;
  font-size: 26px;
  font-weight: 800;
  -webkit-tap-highlight-color: none;
}

table.metadata {
  border-radius: 8px;
  margin-top: 10px;
  border-collapse: collapse;
}

table.metadata table tr td {
  min-height: 26px;
}

table.metadata tr td .limitedHeight {
  max-height: 3rem;
  overflow: scroll;
}

table.metadata tr td.value {
  flex-grow: 1;
  padding-right: 1rem;
}

table.metadata tr td.value textarea {
  width: 100%;
  resize: vertical;
}

table.metadata tr {
  display: block;
  padding: 8px;
  display: flex;
  align-items: anchor-center;
  min-height: 26px;
}

table.metadata tr .buttons {
  margin-left: 15px;
  display: none;
}

table.metadata tr .buttons button {
  width: 24px;
  height: 24px;
  padding: unset;
  background: none;
}

table.metadata tr .buttons button:hover {
  background: var(--secondary-color);
}

table.metadata tr .buttons button svg {
  margin-right: 0px;
  color: white;
}

table.metadata tr:hover .buttons,
table.metadata tr:focus-within .buttons {
  display: flex;
  min-width: fit-content;
  gap: 6px;
  margin-left: auto;
}

table.metadata tr:last-of-type {
  border: none;
}
/* ... */

